--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 						"Ask for 3 references from their last three or four trainees."
 					</p>
 					<p>
-						Get their past four trainees' contact information, and email / call them. You may think you are not in the position of asking for references from a potential resaerch mentor. But keep in mind - three or six years in your life is not less valuable than your mentor's. You can hear real-life horror stories from any graduate student, and malignant research mentors are not rare in the research community. Luckily, a good research mentor will never be afraid of giving you the contact information for their last four trainees.
+						Get their past four trainees' contact information, and email / call them. You may think you are not in the position of asking for references from a potential research mentor. But keep in mind - you deserve a rewarding research career and it relies on a qualified mentor's help. The fact is, you can hear real-life horror stories from almost any graduate student, and malignant research mentors are not rare in the research community. Luckily, a good research mentor will never be afraid of giving you the contact information for their last four trainees.
 					</p>
 					<p> </p>
 
