--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<p>In my teenage years, I wanted to help the ill whom were told by the doctors that there is nothing they can do, so I received education in Biomedical Engineering and Biomedical Sciences at Beijing and Columbus, Ohio. 
 					   In my 20s, I wanted to pursue a career of medical research and education, so I obtained post-doctoral training in Genetics and Hematology/Oncology at Salt Lake City.
 					   In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning at Milwaukee and Frankfurt.
-					   Now, after 20 years of education and training, I am on my scientific journey with a hiking cane and a torch in hand, walking and passing on my knowledge.</p>
+					   Now, after 20 years of education and training, I am on my scientific journey with a hiking cane and a torch in hand, exploring while passing on my knowledge.</p>
 				
 					<a href="short CV_05_2024.pdf" target="_blank">
 						<button type="button" class="btn btn-outline-info" >Learn More</button>
@@ -199,7 +199,7 @@
 					</h2>
 					<p> [07/01/2024] </p>
 					<p>
-						"Ask for 3 references from their last three or four trainees."
+						"Ask for 3 references from their last three or four trainees who have moved on from the group."
 					</p>
 					<p>
 						Get their past four trainees' contact information, and email / call them. You may think you are not in the position of asking for references from a potential research mentor. But keep in mind - you deserve a rewarding research career and it relies on a qualified mentor's help. The fact is, you can hear real-life horror stories from almost any graduate student, and malignant research mentors are not rare in the research community. Luckily, a good research mentor will never be afraid of giving you the contact information for their last four trainees.
