--- a/jiffy_science.html
+++ b/jiffy_science.html
@@ -157,7 +157,7 @@ So, given that sensory activities often compete for our brain’s precious bandw
 </p></div>
 <div class="column"><p>
 
-It’s no surprise that many deep thinkers—those who spend time in solitude—tend to have a rich inner life. They’re able to nourish their senses and creativity with less distraction. Meanwhile, those addicted to constant social interaction may find themselves caught in shallow emotional states, able to blend in with anyone but never truly immersed in deeper, more meaningful experiences. The way we choose to divide our mental energy speaks volumes about how we experience and navigate the world around us.
+It’s no surprise that many deep thinkers—those who spend time in solitude—tend to have a rich inner life, though not exclusively. They’re able to nourish their senses and creativity with less distraction (again, not exclusively). Meanwhile, those addicted to constant social interaction may find themselves caught in fluctuating emotional states, able to blend in with anyone but too distracted to spend time thinking deeply. Exceptions do exist, and a hybrid type between the two is fairly common too. The way we choose to divide our mental energy speaks volumes about how we experience and navigate the world around us.
 </p></div>
 	
 						
