--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-end flex-column">
 					<h2>Helong Gary Zhao, B.Eng., Ph.D.</h2>
-					<p>I am a translational medical research scientist, with specialties in machine learning and data-driven experimental approaches.</p>
+					<h5>I am a translational medical research scientist, with specialties in machine learning and data-driven experimental approaches.</h5>
 					
 				</div>
 			</div>
