--- a/index.html
+++ b/index.html
@@ -127,18 +127,19 @@
 		<!-- container start -->
 		<div class="container">
 			
-			<div class="row my-5  justify-content-center">
-				<div class="col-lg-3 col-md-3 col-6 col-xxl-3">
-					<figure>
-						<img src="images/images/new_ash.jpg" class="my-service img">
-					</figure>
-				</div>
-				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-end flex-column">
-					<h2>Helong Gary Zhao, B.Eng., Ph.D.</h2>
-					<h5>I am a translational medical research scientist, with specialties in machine learning and data-driven experimental approaches.</h5>
-					
-				</div>
-			</div>
+			
+<div class="row my-5 justify-content-center">
+  <div class="col-lg-3 col-md-3 col-6 col-xxl-3">
+    <figure>
+      <img src="images/images/new_ash.jpg" class="my-service img-fluid" alt="Helong Gary Zhao">
+    </figure>
+  </div>
+  <div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
+    <h2>Helong Gary Zhao, B.Eng., Ph.D.</h2>
+    <h5>I am a translational medical research scientist, with specialties in machine learning and data-driven experimental approaches.</h5>
+  </div>
+</div>
+			
 			<!-- 1st row end -->
 			
 
