--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
 
   </div>
-  <div class="carousel-inner">
+  <div class="carousel-inner" style="height: 500px; overflow: hidden;">
     <div class="carousel-item active" data-bs-interval="3000">
-      <img src="images/images/Picture3.png" class="d-block w-100" alt="images/images/Picture3.png">
+      <img src="images/images/Picture3.png" class="d-block w-100 h-100" alt="images/images/Picture3.png">
       <div class="carousel-caption d-md-block">
         <h5></h5>
         
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="3000">
-      <img src="images/images/precision medicine.png" class="d-block w-100" alt="images/images/precision medicine.jpg">
+      <img src="images/images/precision medicine.png" class="d-block w-100 h-100" alt="images/images/precision medicine.jpg">
       <div class="carousel-caption d-md-block">
         <h5></h5>
        
