--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
     <h2>Helong Gary Zhao, B.Eng., Ph.D.</h2>
     <h5>I am a translational medical research scientist, with specialties in machine learning and data-driven experimental approaches.</h5>
   </div>
+	<a href="short CV_05_2024.pdf" target="_blank">
+	<button type="button" class="btn btn-outline-info" >My Biosketch </button>
+	</a>
 </div>
 			
 			<!-- 1st row end -->
@@ -154,9 +157,7 @@
 					   In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning at Milwaukee and Frankfurt.
 					   Now, after 20 years of education and training, I am on my scientific journey with a hiking cane and a torch in hand, exploring while passing on my knowledge.</p>
 				
-					<a href="short CV_05_2024.pdf" target="_blank">
-						<button type="button" class="btn btn-outline-info" >Learn More</button>
-					</a>
+					
 				</div>
 
 				<div class="col-lg-4 col-md-4 col-8 col-xxl-4 my-5">
