--- a/index.html
+++ b/index.html
@@ -196,7 +196,18 @@
 			<div class="row my-5 justify-content-center">
 				
 				<div class="col-lg-12 col-md-12 col-12 col-xxl-12 d-flex justify-content-center align-items-start flex-column">
-					
+					<h2>
+						“To consult the statistician after an experiment is finished is often
+						merely to ask him to conduct a post mortem examination. He can
+						perhaps say what the experiment died of.” – Ronald A. Fisher
+					</h2>
+					<p> [08/16/2025] </p>
+					<p>
+					Wagner, M.R., Kleiner, M. How thoughtful experimental design can empower biologists in the omics era. Nat Commun 16, 7263 (2025). https://doi.org/10.1038/s41467-025-62616-x					</p>
+					<p> </p>
+
+					<hr class="w-25 mx-auto" />
+					<p> </p>
 					<h2>
 						The last advice you'll ever need for choosing a research mentor:
 					</h2>
@@ -321,3 +332,4 @@ Uncontrollable urges to tic or swear can be symptoms of Tourette syndrome. Aggre
 
 </body>
 </html>
+
