--- a/index.html
+++ b/index.html
@@ -109,7 +109,15 @@
 
 		<!-- header end -->
 		
+<style>
+.video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; }
+.video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }
+</style>
 
+<div class="video-wrapper">
+  <iframe src="https://youtu.be/b9FRMGxsWf0" title="Video Intro"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 		<!-- About Me section -->
 
@@ -332,4 +340,5 @@ Uncontrollable urges to tic or swear can be symptoms of Tourette syndrome. Aggre
 
 </body>
 </html>
+
 
