--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </style>
 
 <div class="video-wrapper">
-  <iframe src="https://youtu.be/b9FRMGxsWf0" title="Video Intro"
+  <iframe src="https://www.youtube.com/watch?v=b9FRMGxsWf0" title="Video Intro"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
@@ -340,5 +340,6 @@ Uncontrollable urges to tic or swear can be symptoms of Tourette syndrome. Aggre
 
 </body>
 </html>
+
 
 
