--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 			<div class="row my-5 justify-content-center">
 				<div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
 					<h2>My Journey</h2>
-					<p>In my teenage years, I wanted to help the ill whom were told by the doctors that there is nothing they can do, so I received education in Biomedical Engineering and Biomedical Sciences at Beijing and Columbus, Ohio. 
-					   In my 20s, I wanted to pursue a career of medical research and education, so I obtained post-doctoral training in Genetics and Hematology/Oncology at Salt Lake City.
-					   In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning at Milwaukee and Frankfurt.
+					<p>In my teenage years, I wanted to help the ill whom were told by the doctors that there is nothing they can do, so I received education in Biomedical Engineering and Biomedical Sciences in Beijing and Columbus, Ohio. 
+					   In my 20s, I wanted to pursue a career of medical research and education, so I obtained post-doctoral training in Genetics and Hematology/Oncology in Salt Lake City.
+					   In my early 30s, I realized that my passion in medical research is cancer prevention, so I sought for additional training in Hematology and Machine Learning in Milwaukee and Frankfurt.
 					   Now, after 20 years of education and training, I am on my scientific journey with a hiking cane and a torch in hand, exploring while passing on my knowledge.</p>
 				
 					
@@ -340,6 +340,7 @@ Uncontrollable urges to tic or swear can be symptoms of Tourette syndrome. Aggre
 
 </body>
 </html>
+
 
 
 
