Add new publication entry for Ishida et al.

--- a/Publications.html
+++ b/Publications.html
@@ -123,6 +123,14 @@
 		      <h6>Zhao, H., Mendenhall, M. & Deininger, M.W. Imatinib is not a potent anti-SARS-CoV-2 drug. Leukemia (2020).</h6>
 		      </a>
           </div>
+		<div class="col-md-3 col-10 col-xxl-3 mx-auto">
+              <a href="https://www.cell.com/cell-reports/fulltext/S2211-1247(25)01060-5" target="_blank">
+		  <figure>
+                <img src="images/journals/cover.tif.jpg" alt="Gellery" class="img-fluid">
+              </figure>
+		       <h6>Ishida, Mercoli, Heck, et al. Differentiation latency and dormancy signatures define fetal liver hematopoietic stem cells at single-cell resolution. Cell Reports (2025).</h6>
+		      </a>
+          </div>
           <div class="col-md-3 col-10 col-xxl-3 mx-auto">
               <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/bjh.19254" target="_blank">
 		  <figure>
